src/objects/Site_Part__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Installation_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Site Parts</relationshipLabel>
        <relationshipName>Site_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Loc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Loc</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Site Parts</relationshipLabel>
        <relationshipName>Site_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Used</label>
        <referenceTo>Part_Number__c</referenceTo>
        <relationshipLabel>Site Parts</relationshipLabel>
        <relationshipName>Site_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not in use</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Date__c</fullName>
        <label>Warranty Date</label>
        <type>Date</type>
    </fields>
    <label>Site Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Used__c</columns>
        <columns>Installation_Site__c</columns>
        <columns>Inventory_Loc__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Inventory_and_Site_check</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
  AND (
    ISBLANK(Inventory_Loc__c),
    ISBLANK(Installation_Site__c)),
  AND (
    NOT(ISBLANK(Inventory_Loc__c)),
    NOT(ISBLANK(Installation_Site__c)))
)</errorConditionFormula>
        <errorMessage>Please select Inventory Location or Installation Site.</errorMessage>
    </validationRules>
</CustomObject>